force-app/main/default/objects/Country__c/fields/Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2Code__c</fullName>
    <description>Standardized two-letter country abbreviations defined by the International Organization for Standardization (ISO) to represent countries, dependent territories, and special geographic areas.</description>
    <externalId>true</externalId>
    <inlineHelpText>Two-letter country abbreviation.</inlineHelpText>
    <label>Alpha2Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>