force-app/main/default/objects/Country__c/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <description>Three-letter country codes defined by the International Organization for Standardization (ISO) to represent countries, dependent territories, and special areas of interest.</description>
    <inlineHelpText>Three-letter country code abbreviation.</inlineHelpText>
    <label>Alpha3Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>