force-app/main/default/objects/Country__c/fields/Capital_City__c.field-meta.xml
<CustomField>
    <fullName>Capital_City__c</fullName>
    <description>Name of the country&apos;s capital city.</description>
    <inlineHelpText>The capital city of the country.</inlineHelpText>
    <label>Capital City</label>
    <length>180</length>
    <type>Text</type>
</CustomField>