force-app/main/default/objects/Country__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geographical region where the country is located</description>
    <inlineHelpText>Europe, Asia...</inlineHelpText>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>