force-app/main/default/objects/Country__c/fields/Regional_Blocs__c.field-meta.xml
<CustomField>
    <fullName>Regional_Blocs__c</fullName>
    <description>List of regional blocs the country belongs to.</description>
    <inlineHelpText>EU = European Union</inlineHelpText>
    <label>Regional Blocs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>